Use ZGC that need less memory & should stop at 2GB if it can, or at 90% of memory.