@@ -1,3 +1,3 @@
 @echo off
 echo game launch on Windows
-"java/bin/java.exe" -XX:SoftMaxHeapSize=2G -XX:MaxRAMPercentage=90 -jar Formiko.jar
+"java/bin/java.exe" -XX:+UseZGC -XX:SoftMaxHeapSize=2G -XX:MaxRAMPercentage=90 -jar Formiko.jar
